--- a/style.css
+++ b/style.css
@@ -1,2 +1,25 @@
 *, *::before, *::after
-{ box-sizing: border-box;}
+{
+    box-sizing: border-box;
+    font-family:Geneva, sans-serif;
+    font-weight : normal;
+}
+
+body
+{
+    padding:0;
+    margin:0;
+    background: linear-gradient(to bottom, #f87903, rgba(7, 7, 7, 0.667));
+}
+
+.calculator-grid
+{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    min-height:100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-columns: minmax(120px, auto)repeat(5, 100px);
+
+}
+
