--- a/style.css
+++ b/style.css
@@ -16,10 +16,21 @@ body
 {
     display: grid;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     min-height:100vh;
     grid-template-columns: repeat(4, 100px);
     grid-template-columns: minmax(120px, auto)repeat(5, 100px);
+}
 
+.calculator-grid> button{
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255, 255, 255, 0.75)  ;
+}
+
+.calculator-grid> button:hover{
+    background-color: rgba(255, 255, 255, 0.90);
 }
 
