--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body
 {
     display: grid;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     min-height:100vh;
     grid-template-columns: repeat(4, 100px);
     grid-template-columns: minmax(120px, auto)repeat(5, 100px);
