--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *, *::before, *::after
 {
     box-sizing: border-box;
-    font-family:Geneva, sans-serif;
+    font-family:Tahoma, sans-serif;
     font-weight : normal;
 }
 
