--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ body
     display: grid;
     justify-content: center;
     align-items: center;
-    min-height:100vh;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto)repeat(5, 100px);
 
 }
 
