--- a/style.css
+++ b/style.css
@@ -34,9 +34,12 @@ body
 .calculator-grid> button:hover{
     background-color: rgba(255, 255, 255, 0.90);
 }
+.span-two{
+    grid-column:span 2;
+}
 
 .output{
-    grid-column :1/-1;
+    grid-column :1 /-1;
     background-color: rgba(0, 0, 0, 0.75);
     display:flex;
     align-content:flex-end;
