--- a/style.css
+++ b/style.css
@@ -43,10 +43,11 @@ body
     background-color: rgba(0, 0, 0, 0.75);
     display:flex;
     align-content:flex-end;
-    justify-content: space-btween;
+    justify-content: space-around;
     flex-direction: column;
     padding:10px;
-    word-wrap:break-all;
+    word-wrap:break-word;
+    word-break:break-all;
 }
 .output .previous-operand{
     color: rgba(255, 255, 255, 0.75);
